# gaussprot

./: README.md  pyproject.toml
gaussprot/: __init__.py  main.py
tests/: data.py  test_gaussprot.py
