
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaussprot"
version = "0.0.2"
authors = [
  { name="Stefan Stojanovic", email="stefs304@gmail.com" },
]
description = "Utility for generating Gaussian kernel models of proteins"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/stefs304/gaussprot"
Issues = "https://github.com/stefs304/gaussprot/issues"

